--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#Firebase config
+/src/components/config
 
 # dependencies
 /node_modules
