--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.7.2",
+    "firebase": "^6.2.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2",
+    "react-scripts": "^3.0.1",
+    "react-table": "^6.10.0",
     "redux": "^4.0.1",
     "redux-firestore": "^0.6.1",
     "redux-thunk": "^2.3.0"
